Update DockerFile