@@ -15,4 +15,15 @@ ARG DEPENDENCY=/workspace/app/target/dependency
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
 COPY --from=build ${DEPENDENCY}/META-INF /app/META-INF
 COPY --from=build ${DEPENDENCY}/BOOT-INF/classes /app
-ENTRYPOINT ["java","-cp","app:app/lib/*","hello.Application"]
+COPY src/main/resources/application-example.properties application.properties
+EXPOSE 8421
+ENTRYPOINT [\
+  "java",\
+  "-XX:+UnlockExperimentalVMOptions",\
+  "-XX:+UseCGroupMemoryLimitForHeap",\
+  "-XX:MaxRAMFraction=1",\
+  "-XshowSettings:vm",\
+  "-cp",\
+  "app:app/lib/*",\
+  "ca.levimiller.smsbridge.SmsBridgeApplication"\
+]
